# macrochip

./: .gitmodules  CMakeLists.txt  LICENSE
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/submodules/: CMakeLists.txt
lib/: CMakeLists.txt
lib/include/: ecs_component.h  ecs_core.h  mesh.h  mesh_primitives.h  term.h  utils.h  vulkan_context.h  window.h
lib/src/: ecs_core.c  mesh.c  mesh_primitives.c  vulkan_context.c  window.c
src/: main.c
